# RenkoLabAI

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  README_SPRINT_6I.md  README_SPRINT_6J.md  README_SPRINT_T1.md  README_T2.md  README_T3.md  README_T4.md  SPRINT_6B_IMPLEMENTATION.md  SPRINT_6C_IMPLEMENTATION.md  alembic.ini  benchmark_report.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: README.md  __init__.py  base.py
benchmark/: __init__.py  benchmark_runner.py
data/: users.json
datasets/: README.md
deployment/: README.md
docs/: architecture.md  paper_trading.md  production_audit.md  sprint12_implementation.md  sprint13_19_implementation.md  sprint7_analytics.md  sprint8_phase2.md  sprint8_strategy_framework.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
research/: README.md
scripts/: setup_env.sh
tests/: test_adaptive_provider.py  test_aggregation_engine.py  test_backtesting_engine.py  test_brick_builder_abstraction.py  test_brick_size_providers.py  test_chart.py  test_costs.py  test_engine_persistence.py  test_event_bus.py  test_execution.py  test_health.py  test_hybrid_builder.py  test_market_data.py  test_market_router.py  test_market_streaming.py  test_marketdata.py  test_metrics.py  test_percentage_provider.py  test_performance.py  test_pipeline.py  test_plugin_manager.py  test_portfolio.py  test_price_reference_strategy.py  test_renko_infrastructure.py  test_replay_engine.py  test_research_sprint8_phase2.py  test_validation.py  (+7 more)
(+285 files in other folders)
