[project]
name = "renkolab-ai"
version = "0.1.0"
description = "Enterprise-grade quantitative trading platform foundation."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Software Development :: Libraries",
]

[project.dependencies]
fastapi = "^0.112"
uvicorn = {extras = ["standard"], version = "^0.23"}
sqlalchemy = "^2.0"
alembic = "^1.12"
pydantic = "^2.9"
python-dotenv = "^1.0"
psycopg = {extras = ["binary"], version = "^3.5"}
redis = "^5.3"
pandas = "^2.2"
numpy = "^2.0"
polars = "^0.19"
plotly = "^5.16"
ccxt = "^3.0"
apscheduler = "^3.11"
aiohttp = "^3.9"
asyncpg = "^0.27"
dependency-injector = "^4.50"
PyJWT = "^2.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.22",
    "httpx>=0.26",
    "ruff>=0.0.303",
    "black>=24.12",
    "isort>=5.12",
    "pre-commit>=4.5",
]

[tool.setuptools]
packages = ["find:"]

[project.scripts]
start-backend = "uvicorn backend.app.main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"
